pathing the way for a new benchmark

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,13 @@ config/params
 
 docs
 
+inst/extdata/source/benchmark
 inst/extdata/source/private
 inst/extdata/source/libraries
 inst/extdata/interim
 inst/extdata/processed
+
+python
 
 .Rproj.user
 .Rhistory
