--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(enquos)
 export(export_params)
 export(form_adducts_neg)
 export(form_adducts_pos)
+export(get_benchmark)
 export(get_example_isdb)
 export(get_example_sirius)
 export(get_lotus)
