--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -4,16 +4,22 @@ on:
   push:
     branches: [main]
     tags: ['*']
+  pull_request:
+    branches: [main]
 
 name: pkgdown
 
 jobs:
   pkgdown:
-    runs-on: macOS-latest
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.fork == false
+    runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
       - uses: actions/checkout@v2
+
+      - uses: r-lib/actions/setup-tinytex@v2
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -23,9 +29,14 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          extra-packages: any::pkgdown, local::.
           needs: website
 
-      - name: Deploy package
+      - name: Install package
+        run: R CMD INSTALL .
+
+      - name: Build and deploy pkgdown site
+        if: contains(env.isPush, 'true')
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
