--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -26,6 +26,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::pkgdown, local::.
+          needs: website
+
+      - name: Install package
+        run: R CMD INSTALL .
       - name: Run tests
         run: |
           cp -R config/default config/params
