--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,3 +3,5 @@ template:
   bootstrap: 5
   params: 
     google_site_verification: Bt77rpBuC_R-0p62TWtA_ba5rvx-PuSEMv4LHg1UsOo
+figure:
+  fig.ext: svg
