--- a/paths.yaml
+++ b/paths.yaml
@@ -55,10 +55,10 @@ inst:
     path: inst/scripts
     docopt:
       path: inst/scripts/docopt
-links:
+tests:
+  path: tests
+urls:
   benchmarking_set: https://zenodo.org/record/5186176/files/ALL_GNPS_210125_matchms_pubchem_cleaned_v2.msp?download=1
   example_isdb: https://metabo-store.nprod.net/tima_example_files/interim/example_isdb_result.tsv.gz
   example_sirius: https://metabo-store.nprod.net/tima_example_files/interim/sirius_example
   lotus: https://zenodo.org/record/6277266/files/220208_frozen_metadata.csv.gz?download=1
-tests:
-  path: tests
