improving no network option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(dist_groups)
 export(enquo)
 export(enquos)
 export(export_params)
+export(fake_edges)
+export(fake_features_components)
 export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
