--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(fake_features_components)
 export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
+export(get_example_feature_table)
 export(get_example_isdb)
 export(get_example_sirius)
 export(get_lotus)
