--- a/config/default/fake_edges.yaml
+++ b/config/default/fake_edges.yaml
@@ -1,4 +1,3 @@
 input: inst/extdata/interim/annotations/example_feature_table.tsv.gz # A file containing your feature ids
 output: inst/extdata/interim/edges/96fa7c88200e4a03bee4644e581e3fb0_faked_edges.tsv.gz
-source_name: CLUSTERID1
-target_name: CLUSTERID2
+feature_name: feature_id
