--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(get_benchmark)
 export(get_example_feature_table)
 export(get_example_isdb)
 export(get_example_sirius)
+export(get_isdb)
 export(get_lotus)
 export(get_params)
 export(log_debug)
