--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(enquos)
 export(export_params)
 export(fake_edges)
 export(fake_features_components)
+export(fake_no_rt)
 export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
