--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(prepare_library)
 export(prepare_lotus)
 export(prepare_sirius)
 export(prepare_taxa)
+export(pretreat_names_sirius)
 export(process_annotations)
 export(read_clusters)
 export(read_edges)
@@ -52,6 +53,7 @@ export(read_metadata)
 export(read_nap)
 export(read_results)
 export(taxo_decoration)
+export(treat_names_sirius)
 export(y_as_na)
 import(rlang)
 importFrom(glue,glue)
