--- a/paths.yaml
+++ b/paths.yaml
@@ -19,7 +19,7 @@ data:
       example_feature_table_no_rt: inst/extdata/interim/annotations/example_feature_table_no_rt.tsv.gz
       example_isdb: inst/extdata/interim/annotations/example_isdb_result.tsv.gz
       example_isdb_no_rt: inst/extdata/interim/annotations/example_isdb_result_no_rt.tsv.gz
-      example_sirius: inst/extdata/interim/annotations/sirius_example
+      example_sirius: inst/extdata/interim/annotations/sirius_example.zip
     config:
       path: inst/extdata/interim/config
     edges:
@@ -67,7 +67,7 @@ urls:
   benchmarking_set: https://zenodo.org/record/5186176/files/ALL_GNPS_210125_matchms_pubchem_cleaned_v2.msp?download=1
   example_feature_table: https://gnps.ucsd.edu/ProteoSAFe/DownloadResultFile?task=96fa7c88200e4a03bee4644e581e3fb0&block=main&file=clusterinfo_summary/
   example_isdb: https://metabo-store.nprod.net/tima_example_files/interim/example_isdb_result.tsv.gz
-  example_sirius: https://metabo-store.nprod.net/tima_example_files/interim/sirius_example
+  example_sirius: https://metabo-store.nprod.net/tima_example_files/interim/sirius_example.zip
   isdb: 
     pos: https://zenodo.org/record/5607264/files/MultiSources_ISDB_pos.mgf?download=1
     neg: 
