--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -57,6 +57,8 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
+          args: 'c("--ignore-vignettes")'
+          build_args: 'c("--no-build-vignettes", "--keep-empty-dirs")'
           error-on: '"error"'
 
       - name: Show testthat output
