--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,4 +63,6 @@ importFrom(rlang,.data)
 importFrom(rlang,as_label)
 importFrom(rlang,as_name)
 importFrom(rlang,enquo)
-importFrom(rlang,enquos)
+importFrom(rlang,enquos) 
+importFrom("stats", "dist", "rt", "setNames")  
+importFrom("utils", "download.file", "unzip")
