--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,13 +56,58 @@ export(taxo_decoration)
 export(treat_names_sirius)
 export(y_as_na)
 import(rlang)
+importFrom(crayon,blue)
+importFrom(crayon,cyan)
+importFrom(crayon,green)
+importFrom(crayon,magenta)
+importFrom(crayon,red)
+importFrom(crayon,silver)
+importFrom(crayon,white)
+importFrom(crayon,yellow)
+importFrom(curl,curl_download)
+importFrom(docopt,docopt)
+importFrom(dplyr,across)
+importFrom(dplyr,add_count)
+importFrom(dplyr,all_of)
+importFrom(dplyr,anti_join)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,dense_rank)
+importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
+importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
+importFrom(dplyr,n_distinct)
+importFrom(dplyr,right_join)
+importFrom(dplyr,rowwise)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,tibble)
+importFrom(dplyr,ungroup)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
+importFrom(purrr,flatten)
+importFrom(readr,read_csv)
+importFrom(readr,read_delim)
+importFrom(readr,read_file)
+importFrom(readr,read_tsv)
+importFrom(readr,write_csv)
+importFrom(readr,write_delim)
+importFrom(readr,write_file)
+importFrom(readr,write_tsv)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
 importFrom(rlang,as_name)
 importFrom(rlang,enquo)
-importFrom(rlang,enquos) 
-importFrom("stats", "dist", "rt", "setNames")  
-importFrom("utils", "download.file", "unzip")
+importFrom(rlang,enquos)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_length)
+importFrom(tidyr,pivot_longer)
+importFrom(yaml,read_yaml)
+importFrom(yaml,write_yaml)
