--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,10 @@ importFrom(crayon,silver)
 importFrom(crayon,white)
 importFrom(crayon,yellow)
 importFrom(curl,curl_download)
+importFrom(data.table,data.table)
+importFrom(data.table,foverlaps)
+importFrom(data.table,rbindlist)
+importFrom(data.table,setkey)
 importFrom(docopt,docopt)
 importFrom(dplyr,across)
 importFrom(dplyr,add_count)
@@ -72,6 +76,7 @@ importFrom(dplyr,all_of)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,coalesce)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
@@ -79,19 +84,28 @@ importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_cols)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
+importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,right_join)
+importFrom(dplyr,row_number)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
+importFrom(dplyr,setdiff)
 importFrom(dplyr,summarise)
+importFrom(dplyr,summarise_all)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
-importFrom(purrr,flatten)
+importFrom(purrr,map_df)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
 importFrom(readr,read_file)
@@ -106,8 +120,16 @@ importFrom(rlang,as_label)
 importFrom(rlang,as_name)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
+importFrom(rotl,tax_lineage)
+importFrom(rotl,taxonomy_taxon_info)
+importFrom(rotl,tnrs_match_names)
+importFrom(splitstackshape,cSplit)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_length)
+importFrom(tibble,column_to_rownames)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
