--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(biological_weighting)
 export(chemical_cleaning)
 export(chemical_decoration)
 export(chemical_weighting)
+export(complement_metadata)
 export(dist_get)
 export(dist_groups)
 export(enquo)
@@ -124,6 +125,8 @@ importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
 importFrom(splitstackshape,cSplit)
+importFrom(stats,dist)
+importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_length)
 importFrom(tibble,column_to_rownames)
