--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(prepare_gnps)
 export(prepare_isdb)
 export(prepare_library)
 export(prepare_lotus)
+export(prepare_params)
 export(prepare_sirius)
 export(prepare_taxa)
 export(pretreat_names_sirius)
@@ -53,6 +54,7 @@ export(read_features)
 export(read_metadata)
 export(read_nap)
 export(read_results)
+export(replace_gnps_job_id)
 export(taxo_decoration)
 export(treat_names_sirius)
 export(y_as_na)
