--- a/config/default/prepare_taxa.yaml
+++ b/config/default/prepare_taxa.yaml
@@ -2,8 +2,8 @@ tool: gnps # manual or ready
 input: inst/extdata/interim/example_mzmine_manual.csv # your mzmine feature table if manual
 metadata: inst/extdata/interim/example_metadata_manual.csv # if you have a manual metadata table
 output: inst/extdata/interim/taxa/96fa7c88200e4a03bee4644e581e3fb0_taxed.tsv.gz
-extension: TRUE # is the filename extension present in your feature table?
+extension: yes # is the filename extension present in your feature table?
 column_name: ATTRIBUTE_species  # biological_source
 gnps: 96fa7c88200e4a03bee4644e581e3fb0 # needed depending on the tool you used
 top_k: 1 # number of organisms per feature
-taxon: # manually force all features to a given taxon (if you do not have formatted metadata)
+taxon: ~ # manually force all features to a given taxon (if you do not have formatted metadata)
