[dependencies] remove splitstackshape

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,7 +126,6 @@ importFrom(rlang,enquos)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
-importFrom(splitstackshape,cSplit)
 importFrom(stats,dist)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
@@ -136,5 +135,6 @@ importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,separate_rows)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
