--- a/paths.yaml
+++ b/paths.yaml
@@ -69,7 +69,7 @@ urls:
   example_isdb: https://metabo-store.nprod.net/tima_example_files/interim/example_isdb.tsv.gz
   example_sirius: https://metabo-store.nprod.net/tima_example_files/interim/example_sirius.zip
   isdb:
-    pos: https://zenodo.org/record/5607264/files/MultiSources_ISDB_pos.mgf?download=1
-    neg:
-  lotus: https://zenodo.org/record/6786314/files/220701_frozen_metadata.csv.gz?download=1
+    pos: https://zenodo.org/record/6939173/files/isdb_pos.mgf?download=1
+    neg: https://zenodo.org/record/6939173/files/isdb_neg.mgf?download=1
+  lotus: https://zenodo.org/record/7085063/files/220916_frozen_metadata.csv.gz?download=1
 version: 2.5.5
