--- a/paths.yaml
+++ b/paths.yaml
@@ -66,8 +66,8 @@ tests:
 urls:
   benchmarking_set: https://zenodo.org/record/5186176/files/ALL_GNPS_210125_matchms_pubchem_cleaned_v2.msp?download=1
   example_feature_table: https://gnps.ucsd.edu/ProteoSAFe/DownloadResultFile?task=96fa7c88200e4a03bee4644e581e3fb0&block=main&file=clusterinfo_summary/
-  example_isdb: https://metabo-store.nprod.net/tima_example_files/interim/example_isdb.tsv.gz
-  example_sirius: https://metabo-store.nprod.net/tima_example_files/interim/example_sirius.zip
+  example_isdb: https://github.com/taxonomicallyinformedannotation/demo-files/raw/main/example_isdb.tsv.gz
+  example_sirius: https://github.com/taxonomicallyinformedannotation/demo-files/raw/main/example_sirius.zip
   isdb:
     pos: https://zenodo.org/record/6939173/files/isdb_pos.mgf?download=1
     neg: https://zenodo.org/record/6939173/files/isdb_neg.mgf?download=1
