--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -21,9 +21,9 @@ jobs:
       matrix:
         config:
            - {os: macOS-latest,   r: 'release'}
-          # - {os: windows-latest, r: 'release'}
-          # - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          #- { os: ubuntu-latest,   r: 'release' }
+           - {os: windows-latest, r: 'release'}
+           - {os: ubuntu-latest,  r: 'devel', http-user-agent: 'release'}
+           - {os: ubuntu-latest,  r: 'release'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
