--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -17,7 +17,7 @@ jobs:
         os: [ 
           'ubuntu-latest', 
           'macos-latest' 
-          # 'windows-latest' writes_delim with na="" fails
+          'windows-latest'
         ]
     defaults:
       run:
