--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -16,9 +16,9 @@ jobs:
       matrix:
         os: [ 
           'ubuntu-latest', 
-          'macos-latest' 
+          'macos-latest', 
           'windows-latest'
-        ]
+          ]
     defaults:
       run:
         shell: bash
