--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: timaR
 Title: Taxonomically Informed Metabolite Annotation
 Version: 2.5.6
 Authors@R: c(
-    person("Adriano", "Rutz", , "adriano.rutz@unige.ch", role = c("aut", "cre"),
+    person("Adriano", "Rutz", , "rutz@imsb.biol.ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0443-9902")),
     person("Pierre-Marie", "Allard", , "pierre-marie.allard@unifr.ch", role = "ctb",
            comment = c(ORCID = "0000-0003-3389-2191"))
