--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,4 +31,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: adafede/tima:latest
+          tags: adafede/tima-r:latest
