--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,18 @@ version: "3.9"
 services:
   prepare_params:
     build: "."
+    image: adafede/tima-r
     volumes:
         - "./config:/config"
     command: Rscript inst/scripts/prepare_params.R
 
   tima:
     build: "."
+    image: adafede/tima-r
     volumes:
         - "./config:/config"
         - "./inst:/inst"
+        - ".data:/data"
     command: Rscript inst/scripts/tima.R
 
 # other smaller services not implemented yet
