--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,12 @@
-.RData
+.DS_Store
+.httr-oauth
+.idea
+.Rproj.user
 .Rhistory
+.Rdata
+.vscode
+
 .git
 .gitignore
 manifest.json
 rsconnect/
-.Rproj.user
