--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(export_params)
 export(fake_edges)
 export(fake_features_components)
 export(fake_no_rt)
+export(follow_next)
 export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
@@ -21,6 +22,7 @@ export(get_example_feature_table)
 export(get_example_isdb)
 export(get_example_sirius)
 export(get_isdb)
+export(get_last_version_from_zenodo)
 export(get_lotus)
 export(get_params)
 export(log_debug)
@@ -101,6 +103,7 @@ importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(purrr,flatten)
 importFrom(purrr,map_df)
+importFrom(purrr,pluck)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
 importFrom(readr,read_file)
@@ -112,6 +115,10 @@ importFrom(readr,write_tsv)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
+importFrom(rvest,html_attr)
+importFrom(rvest,html_element)
+importFrom(rvest,session)
+importFrom(rvest,session_jump_to)
 importFrom(stats,dist)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
