--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,8 +42,10 @@ Collate:
     'clean_bio.R'
     'clean_chemo.R'
     'complement_metadata.R'
+    'create_dir.R'
     'decorate.R'
     'dist_groups.R'
+    'export_output.R'
     'export_params.R'
     'fake_edges.R'
     'fake_features_components.R'
