--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,13 @@ export(annotate_non_ms1)
 export(clean_bio)
 export(clean_chemo)
 export(complement_metadata)
+export(create_dir)
 export(decorate_bio)
 export(decorate_chemo)
 export(decorate_ms1)
 export(dist_get)
 export(dist_groups)
+export(export_output)
 export(export_params)
 export(fake_edges)
 export(fake_features_components)
