--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,16 +16,13 @@ export(export_params)
 export(fake_edges)
 export(fake_features_components)
 export(fake_no_rt)
-export(follow_next)
 export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
 export(get_example_feature_table)
 export(get_example_isdb)
 export(get_example_sirius)
-export(get_isdb)
 export(get_last_version_from_zenodo)
-export(get_lotus)
 export(get_params)
 export(log_debug)
 export(parse_cli_params)
@@ -64,6 +61,7 @@ importFrom(crayon,silver)
 importFrom(crayon,white)
 importFrom(crayon,yellow)
 importFrom(curl,curl_download)
+importFrom(curl,curl_fetch_memory)
 importFrom(data.table,data.table)
 importFrom(data.table,foverlaps)
 importFrom(data.table,rbindlist)
@@ -103,28 +101,24 @@ importFrom(dplyr,summarise_all)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(jsonlite,fromJSON)
 importFrom(purrr,flatten)
 importFrom(purrr,map_df)
-importFrom(purrr,pluck)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
-importFrom(readr,read_file)
 importFrom(readr,read_tsv)
 importFrom(readr,write_csv)
 importFrom(readr,write_delim)
-importFrom(readr,write_file)
 importFrom(readr,write_tsv)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
-importFrom(rvest,html_attr)
-importFrom(rvest,html_element)
-importFrom(rvest,session)
-importFrom(rvest,session_jump_to)
 importFrom(stats,dist)
 importFrom(stats,setNames)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_length)
+importFrom(stringr,str_match)
+importFrom(stringr,str_remove)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
