--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,11 @@ Imports:
     tibble,
     tidyr,
     yaml
+Remotes:
+    rformassspectrometry/MetaboAnnotation
+    rformassspectrometry/MsBackendMgf
+    rformassspectrometry/MsCoreUtils
+    rformassppectrometry/Spectra
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
@@ -56,10 +61,12 @@ Collate:
     'get_benchmark.R'
     'get_example_feature_table.R'
     'get_example_isdb.R'
+    'get_example_mgf.R'
     'get_example_sirius.R'
     'get_last_version_from_zenodo.R'
     'get_params.R'
     'log_debug.R'
+    'ms2_matching_peaks.R'
     'parse_cli_params.R'
     'parse_yaml_params.R'
     'parse_yaml_paths.R'
@@ -76,6 +83,7 @@ Collate:
     'prepare_taxa.R'
     'pretreat_names_sirius.R'
     'process_annotations.R'
+    'process_spectra.R'
     'read_clusters.R'
     'read_edges.R'
     'read_features.R'
