--- a/paths.yaml
+++ b/paths.yaml
@@ -45,6 +45,8 @@ data:
     dictionaries:
       path: data/source/dictionaries
       ranks: inst/extdata/ranks.tsv
+    example:
+      mgf: data/source/example.mgf
     libraries:
       path: data/source/libraries
       hmdb: data/source/libraries/hmdb_metabolites.zip
@@ -70,6 +72,7 @@ urls:
   benchmarking_set: https://zenodo.org/record/5186176/files/ALL_GNPS_210125_matchms_pubchem_cleaned_v2.msp?download=1
   example_feature_table: https://gnps.ucsd.edu/ProteoSAFe/DownloadResultFile?task=96fa7c88200e4a03bee4644e581e3fb0&block=main&file=clusterinfo_summary/
   example_isdb: https://github.com/taxonomicallyinformedannotation/demo-files/raw/main/example_isdb.tsv.gz
+  example_mgf: https://github.com/taxonomicallyinformedannotation/demo-files/raw/main/example.mgf
   example_sirius: https://github.com/taxonomicallyinformedannotation/demo-files/raw/main/example_sirius.zip
   hmdb: https://hmdb.ca/system/downloads/current/hmdb_metabolites.zip
   isdb: 
