--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,9 +32,9 @@ Imports:
     tidyr,
     yaml
 Remotes:
-    rformassspectrometry/MetaboAnnotation
-    rformassspectrometry/MsBackendMgf
-    rformassspectrometry/MsCoreUtils
+    rformassspectrometry/MetaboAnnotation,
+    rformassspectrometry/MsBackendMgf,
+    rformassspectrometry/MsCoreUtils,
     rformassppectrometry/Spectra
 Config/testthat/edition: 3
 Encoding: UTF-8
