--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,19 +23,18 @@ Imports:
     docopt,
     dplyr,
     jsonlite,
+    MetaboAnnotation,
+    MsBackendMgf,
+    MsCoreUtils,
     purrr,
     readr,
     rotl,
+    Spectra,
     stats,
     stringr,
     tibble,
     tidyr,
     yaml
-Remotes:
-    rformassspectrometry/MetaboAnnotation,
-    rformassspectrometry/MsBackendMgf,
-    rformassspectrometry/MsCoreUtils,
-    rformassppectrometry/Spectra
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
