--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: timaR
 Title: Taxonomically Informed Metabolite Annotation
-Version: 2.6.1
+Version: 2.7.0
 Authors@R: c(
     person("Adriano", "Rutz", , "rutz@imsb.biol.ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0443-9902")),
@@ -17,6 +17,7 @@ BugReports:
 Depends:
     R (>= 4.1.0)
 Imports:
+    CompoundDb,
     crayon,
     curl,
     data.table,
