--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(dist_get)
 export(dist_groups)
 export(export_output)
 export(export_params)
+export(export_spectra)
+export(extract_spectra)
 export(fake_edges)
 export(fake_features_components)
 export(fake_no_rt)
@@ -26,6 +28,7 @@ export(get_example_mgf)
 export(get_example_sirius)
 export(get_last_version_from_zenodo)
 export(get_params)
+export(import_spectra)
 export(log_debug)
 export(parse_cli_params)
 export(parse_yaml_params)
@@ -54,8 +57,12 @@ export(replace_gnps_job_id)
 export(treat_names_sirius)
 export(weight_bio)
 export(weight_chemo)
+importFrom(CompoundDb,CompDb)
+importFrom(CompoundDb,Spectra)
+importFrom(CompoundDb,createCompDb)
 importFrom(MetaboAnnotation,CompareSpectraParam)
 importFrom(MetaboAnnotation,matchSpectra)
+importFrom(MsBackendMgf,MsBackendMgf)
 importFrom(MsBackendMgf,readMgf)
 importFrom(MsCoreUtils,gnps)
 importFrom(MsCoreUtils,navdist)
@@ -63,6 +70,9 @@ importFrom(MsCoreUtils,ndotproduct)
 importFrom(MsCoreUtils,neuclidean)
 importFrom(MsCoreUtils,nspectraangle)
 importFrom(Spectra,Spectra)
+importFrom(Spectra,export)
+importFrom(Spectra,peaksData)
+importFrom(Spectra,spectraData)
 importFrom(crayon,blue)
 importFrom(crayon,cyan)
 importFrom(crayon,green)
@@ -82,6 +92,7 @@ importFrom(dplyr,across)
 importFrom(dplyr,add_count)
 importFrom(dplyr,all_of)
 importFrom(dplyr,anti_join)
+importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,coalesce)
@@ -102,6 +113,7 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,na_if)
+importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,row_number)
 importFrom(dplyr,rowwise)
@@ -109,6 +121,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
+importFrom(dplyr,summarize)
+importFrom(dplyr,summarize_all)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
