--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,11 +75,11 @@ Collate:
     'prepare_features_classification.R'
     'prepare_features_components.R'
     'prepare_gnps.R'
-    'prepare_isdb.R'
     'prepare_library.R'
     'prepare_lotus.R'
     'prepare_params.R'
     'prepare_sirius.R'
+    'prepare_spectral_matches.R'
     'prepare_taxa.R'
     'pretreat_names_sirius.R'
     'process_annotations.R'
