--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,11 +38,11 @@ export(prepare_edges)
 export(prepare_features_classification)
 export(prepare_features_components)
 export(prepare_gnps)
-export(prepare_isdb)
 export(prepare_library)
 export(prepare_lotus)
 export(prepare_params)
 export(prepare_sirius)
+export(prepare_spectral_matches)
 export(prepare_taxa)
 export(pretreat_names_sirius)
 export(process_annotations)
